--- a/css/style.css
+++ b/css/style.css
@@ -5959,10 +5959,20 @@ img {
     font-size: 11em;
 //    font-weight: 700
 }
+.bold-subtitle {
+    font-size: 3em;
+    margin-top: -5em;
+//    font-weight: 700
+}
 @media screen and (max-width: 768px) {
     .bold-title {
         font-size: 4em;
         text-align: center
+    }
+
+    .bold-subtitle {
+        margin-top: 0em;
+        font-size: 1em;
     }
 }
 .top-pad {
